<resources>
    <string name="app_name">quiz_app</string>
    <string name="bt1">Button</string>
    <string name="bt2">Button</string>
    <string name="bt3">Button</string>
    <string name="txt">TextView</string>
    <string name="bt4">Button</string>
    <string name="next">next</string>
    <string name="vibhakti_prakaranam">कर्ता कर्म च करणं सम्प्रदानं तथैव च ।---अपादानाधिकरण इत्याहुः कारकाणि षट् ।।\nप्रातिपदिकार्थलिंगपरिमाणवचनमात्रे प्रथमा---प्रातिपदिकार्थमात्रे लिङ्गमात्राद्याधिक्ये परिमाणमात्रे संख्यामात्रे च प्रथमा स्यात् । \nप्रातिपदिकम्---यस्मिन् प्रातिपदिके उच्चारिते यस्यार्थस्य नियमेन भानं स प्रातिपदिकार्थाधिक्ये\nसंबोधने च---संबोधनेधिके गम्येपि प्रथमा स्यात्\nकर्तुरीप्सिततमं कर्म---कर्तुः क्रियया आप्तुं इष्टतमं कारकं कर्मसंज्ञं स्यात्\nअकथितं च ---अपादानादिविसेषैरविवक्षितं कारकं कर्मसंज्ञं स्यात् \nकर्मणि द्वितीया---अनुक्ते कर्मणि द्वितीया स्यात् । अभिहिते तु कर्मादौ प्रथमैव भवति ।\nस्वतंत्रः कर्ता---क्रियायां स्वातंत्र्येण विवक्षितोर्थः कर्ता स्यात् ।\nसाधकतमं करणं---क्रियासिद्दौ प्रकृष्टोपकारकं कारकं करणसंज्ञं स्यात् । यद्व्यापाराव्यवधानेन क्रियाफलनिष्पत्तिः तत्प्रकृष्टम् ।\nकर्तृकरणयोः तृतीया---अनभिहिते कर्तरि करणे च तृतीया स्यात्\nसहयुक्ते अप्रधाने---सहार्थकशब्दानां (सह-साकं-सार्ध-समम्) योगे सहार्थविवक्षायां च अप्रधानात् तृतीया विभक्तिः स्यात् ।\nकर्मणा यमभिप्रैति स सम्प्रदानम्---कर्मसंज्ञकेन द्रव्येण यमभिसम्बद्धुम् इच्छति स सम्प्रदानसंज्ञः स्यात् ।\nचतुर्थी सम्प्रदाने---अन्यतोनभिहिते सम्प्रदानकारक् सम्प्रदानसंज्ञकात् शब्दात् चतुर्थी स्यात् ।\nध्रुवमपाये अपादानम्---अपाये(विश्लेषे) साध्ये अवधिभूतं कारकम् अपादानसंज्ञं स्यात् ।\nअपादाने पंचमी---अनभिहिते अपादानकारके अपादानसंज्ञकात् शब्दात् पंचमी स्यात् ।\nषष्ठी शेषे---कारकप्रातिपदिकार्थव्यतिरिक्तः स्वस्वामिभावादिः सम्बन्धः शेषः , तत्र षष्ठी । कर्मादीनामपि संबंधमात्रविवक्षायां षष्ठ्येव ।\nअधारोधिकरणम्---कर्तृकर्मद्वारा तन्निष्ठक्रियायाः आधारः कारकम् अधिकरणसंज्ञं स्यात्\nसप्तम्यधिकरणे च---अधिकरणसंज्ञकात् दूरान्तिकार्थेभ्यश्च सप्तमी स्यात् ।\n</string>
    <string name="samasa">समासः प्रत्यय लोपाभ्यां द्विधा भवति---लुक् अलुक्\nएकं पदं अन्येन पदेन साकं समस्यते तदा तत्सम्बद्धाः प्रत्ययाः लुप्यन्ते---लुक् समासः\nएकं पदं तत्सम्बद्धं विभक्तिप्रत्ययलोपं विना अन्येन पदेन साकं संयुज्यते ---अलुक् ससासः\nपदार्थप्राधान्यमनुसृत्य समासः ----- विभज्यते---चतुर्धा\nउपकृष्णम्---अव्ययीभावसमासः\nराजपुरुषम् आनय---षष्ठीतत्पुरुषसमासः\nरामलक्ष्मणौ भोजय---द्वन्द्वसमासः\nदृष्टसागरम् आनय---बहुव्रीहिसमासः\nप्रायः पूर्वपदार्थप्राधान्यम्---अव्ययीभावः\nप्रायः उत्तरपदार्थप्राधान्यम्---तत्पुरुषः\nप्रायः उभयपदार्थप्राधान्यम्---द्वन्द्वः\nप्रायः अन्यपदार्थप्राधान्यम्---बहुव्रीहिः\nअविग्रहो..स्वपदविग्रहो वा---नित्यसमासस्य\nसदृशं त्रिषु लिंगेषु सर्वासु च विभक्तिषु ।---वचनेषु च सर्वेषु यन्नव्येति तदव्ययम् ।।\nअव्ययीभावः---विभक्त्यर्थादिषु वर्तमानम् अव्ययं सुबन्तेन नित्यं समस्यते सः\nअधिहरि---हरौ इति (अव्ययीभावः)\nअध्यात्मम् (विभक्त्यर्थे)---आत्मनि इति (अव्ययीभावः)\nउपकृष्णम्(समीपार्थे)---कृष्णस्य समीपम् (अव्ययीभावः)\nउपवृक्षम् (समीपार्थे)---वृक्षस्य समीपम् (अव्ययीभावः)\nअतिनिद्रम्(असम्प्रत्यर्थे)---निद्रा सम्प्रति न युज्यते (अव्ययीभावः)\nयथा असादृश्ये ---यथा इत्येतदव्ययमसादृश्ये वर्तमानं सुबन्तेन सह समस्यते अव्ययीभावश्च समासो भवति ।\nयथावृद्धम्---वृद्धान् अनतिक्रम्य (यथासादृश्ये)\nयथाध्यापकम्---अध्यापकान् अनतिक्रम्य (अव्ययीभावः)\nसुप्प्रतिना मात्रार्थे---मात्रार्थे वर्मानेन प्रतिन सह सुबन्तं समस्यते ्व्ययीभावश्च समासो भवति मात्रा बिन्दुः स्तोकमल्पमिति एकार्थः । शाकप्रति --शाकस्य लेशः\nपारेमध्ये षष्ठ्या वा---पारमध्यशब्दौ षष्ठ्यन्तेन सह विभाषा समस्यते अव्ययीभावश्च समासो भवति ।\nपारेगङ्गम् --पारं गङ्गायाः---अव्ययीभाव समासः\nअन्यपदार्थे च संज्ञायाम्---नदीभिः सह सुन्तमन्यपदार्थे वर्तमानं संज्ञायां गम्यायां नित्यं समस्यते अव्ययीभावश्च समासो भवति ।\nउन्मत्तगङ्गम् (देशः ) ---उन्मत्ता गङ्गा यत्र सः \nलोहितगङ्गम् (देशः)---लोहिता गङ्गा यत्र सः (अव्ययी भाव समासः )\nपूर्वापराधरोत्तरमेकदेशिनैकाधिकरणे---अवयविना सह पूर्वादयः समस्यन्ते एकत्वसंख्याविशिष्टश्चेदवयवी ।\nपूर्वं कायस्य---पूर्व कायः (तत्पुरुष समासः)\nअपरकायः---अपरं कायस्य (तत्पुरुष समासः)\nअर्धं नपुंसकम्---समांशवाचि अर्धमित्येतत् नपुंसकम् एकदेशिनेकाधिकरणेन समस्यते , तत्पुरुष समासो भवति\nअर्धपिप्पली---अर्धं पिप्पल्याः (तत्पुरुष समासः)\nद्वतीया श्रितातीतपतितगतात्यस्तप्राप्तापन्नैः---द्वितीयान्तं सुबन्तं श्रितादिभिः सह समस्यते तत्पुरुश्च समासो भवति\nतृतीया तत्कृतार्थेन गुणवचनेन---तृतीयान्तं सुबन्तं गुणवचनेन अर्थशब्देन च सह समस्यते , तत्पुरुषश्च समासो भवति ।\nपूर्वसदृशसमानार्थकलहनिपुणमिश्रश्लक्ष्णैः---पूर्वादि सह तृतीयान्तं समस्यते ,तत्पुरुषश्च समासो भवति ।\nमासपूर्वः---मासेन पूर्वः (तृतीया तत्पुरुष)\nमातृसदृशः---मात्रा सदृशः (तृ त)\nआचारनिपुणः---आचारेण निपुणः (तृतीय त)\nकर्तृकरणे कृता बहुलम्---कर्तरि करणे च या तृतीया तदन्तं कृदन्तेन ह समस्यते बहुलं \nचतुर्थी तदर्थार्थबलिहितसुखरक्षितैः---तदर्थ,अर्थ,बलि,हित,सुख,रक्षित इत्येतैः सह चतुर्थ्यन्तं समस्येत तत्पुरुषश्च समासो भवति ।\nयूपदारू---यूपाय दारू (चतुर्थी त)\nकुण्डलहिरण्यम् ---कुण्डलाय हिरण्यम् (चतुर्थी तत्पुरुष)\nब्राह्मणार्थम् , कुबेरबलिः---ब्राह्मणाय इदम् , कुबेराय बलिः\nगोहितम् , अश्वरक्षितम्---गवे हितम् । अश्वाय रक्षितम्\nपञ्चमी भयेन---पञ्चम्यन्तं भयार्थकभयभीति भीरित्यादिभिः शब्दैः सह समस्यते वा , तत्पुरुषश्च समासो भवति ।\nवृकभयम्---वृकेन भयम्\nचोरभीतः---चोरात् भीतः\nवृश्चिकभीः---वृश्चिकात् भीः\nषष्ठी---षष्ठ्यन्तं सुबन्तं समर्थेन सुबन्तेन समस्यते ,तत्पुरुष्श्च समासो भवति .\nराजपुरुषऱः ---राज्ञः पुरुषः\nब्राह्मणकम्बलः---ब्राह्मणस्य कम्बलः (षष्ठी तत्पुरुष)\nसप्तमी शौण्डैः---सप्तम्यन्तं शौण्डादिभिः सह समस्यते तत्पुरुषश्च समासो भवति .\nनञ्---नञ् समर्थेन सुबन्तेन सह समस्यते , तत्पुरुषश्च समासो भवति ।\nविशेषणं विशेष्येण बहुलम्---विशेषणवाचि सुबन्तं विशेष्यवाचिना समानाधिकरणेन सुबन्तेन सह बहुलं समस्यते तत्पुरुषश्च समासो भवति ।\n</string>
    <string name="tarkaha">मोक्षसाधनम् ज्ञानम् किम् --- पदार्थ-तत्वज्ञानम्\nतार्किकाः कतिविधाः --- तार्किकाः द्विविधाः\nद्विविधतार्किकाः कौ  --- वैशेषिकाः ,नैयायिकाः\nन्यायमते कति पदार्थाः --- षो़डश\nसप्तमः पदार्थः कः --- अभावः\nद्रव्यस्य प्राथम्ये को हेतुः --- गुणादीनां पञ्चानां अश्रयः द्रव्यमेव । अतः द्रव्यस्य प्राथम्यम्\nसामान्यं नाम किम् --- जातिः\nसमवायः कुतः भावे निविष्टः  --- गुणादयः चत्वारः द्रव्ये समवाय-सम्वन्धेन भवन्ति । अतः समवायः भावेषु अन्ते निविष्टः ।\nपञ्चभूतद्रव्याणि कानि  --- पृथिवी,आपः,तेजः,वायुः,आकाशः\nआत्मा कुतः न मूर्त द्रव्यम् --- क्रिया नास्ति इति कारणतः\nमनः कुतः अन्ते परिगणितम् --- मनः परमाणुरूपम् , विभु न भवति अतः\nविभुद्रव्याणि काऩि --- आकाश,काल,दिक्, आत्मा\nभूतलक्षणम् किम् --- बहिरिन्द्रियग्राह्य-विशेषगुणवत्वं भूतलक्षणम्\nमूर्तलक्षणम् किम् --- क्रियावत्वम्\nद्रव्यस्य किम् लक्षणम् --- गुणवत्वम्\nभावपदार्थाः  _____ सङ्क्याकाः --- षट्\nवायोः _____ विशेषगुणः --- अनुष्णाशीताख्यः स्पर्शः\nशब्दः _____ विशेषगुणः --- आकाश\nविशेषः _____ पदार्थः --- इतरेषु अविद्यमानः\nसमवायः एकः --- भाव पदार्थः\nपृथिव्यां _____ विशेषगुणः अस्ति --- गन्धवत्वम्\nआत्मा _____ पदार्थः --- विभु\nमनः नित्यं _____ रूपम् --- परमाणु\nपृथिव्यादि चतुष्टयं _____ --- अनित्यद्रव्याणि\nपृथिवि --- गन्धवती ।\nसा द्विविधा --- नित्या । अनित्या\nनित्या पृथिवी --- परमाणुरूपा\nअनित्या पृथिवी --- कार्यरूपा\nपृथिवी त्रिविधा --- शरीरेन्द्रिय विषय भेदात्\nइन्द्रियं  --- गन्धग्राहकं घ्राणम्\nविषयः --- मृत्पाषाणादिः\nनवसु द्रव्येषु मध्ये प्रथमा --- पृथिवी\nपाषाणादौ गन्धः स्फुटम् नोपलभ्यते --- अनुत्कटत्वात्\nद्रवरूपा पृथिवी का --- घृतम्\nपार्थिवम् इन्द्रियं किम् --- घ्राणेन्द्रियम्\nपृथिव्यां विषयः कः भवति --- मृत्पाषाणादिः\nनित्या पृथिवी का --- परमाणुरूपा\nपृथिव्यां गन्धः केन सम्बन्धेन विद्यते --- समवाय\nपृथिव्यां कीदृशः स्पर्शः अस्ति --- अनुष्णाशीतः\nघ्राणेन्द्रियम् कस्य ग्राहकम् --- गन्धस्य\nपृथिव्यां कति विधाः सन्ति --- षड्\nजले गन्धः _____सम्बन्धेन अस्ति --- परम्परा\nपाषाणे गन्धः _____ नोपलभ्यते --- स्फुटम्\nनैयायिकाःः_____आरम्भवादिनः --- परामाणु\nद्वाभ्यां अणुभ्यां _____ उत्पद्यते --- द्व्यणुकम्\nन्यायमते इन्द्रियाणि _____ --- पञ्च\nपार्थिवशरीरे जलादीनि _____ कारणानि ---निमित्त\n _____रूपा पृथिवी नित्या --- परमाणुरूप\n</string>
    <string name="vyakaranam">येनाक्षरसमाम्नायमधिगम्य महेश्वरात् । --- कृत्सं व्याकरणं प्रोक्तं तस्मै पाणिनये नमः\nआदिरन्त्येन सहेता --- अन्त्येनेता सहितः आदिः मध्यगानां स्वस्य च संज्ञा स्यात् ।\nआदिरन्त्येन सहेता --- अण् अक् इत्यादि।\nउपदेशे..जनुनासिक इत् --- उपदेशे अजनुनासिकः । उपदेश आद्योच्चारणम् ।\nहलन्त्यम् --- उपदेशे अन्त्यं हल् इत् स्यात्\nतस्य लोपः । --- तस्येतो लोपः स्यात्\nअदर्शनं लोपः --- प्रसक्तस्यादर्शनं  ।\nऊकालोज्झस्वदीर्घप्लुतः । --- उश्च ऊश्च उश्श्च वः । वां काल इव कालो यस्य सो अच् ।\nऊकालोज्झस्वदीर्घप्लुतः । --- यथा दधि,गौरी,देवदत्त..3अत्र।\nउच्चैरुदात्तः। --- तााल्वादिषु सभागेषु स्थानेषूर्ध्वभागे निष्पन्नः ।\nनीचैरनुदात्तः । --- ताल्वादिषु सभागेषु सस्थानेष्वधोभागे निष्पन्नः ।\nसमाहारः स्वरितः। --- उदात्तत्वानुदात्तत्वे वर्णधर्मौ समाह्रियेते यस्मिन् सो..च्  स्वर\nमुखनासिकावचनोनुनासिकः । --- मुखसहितनासिकयोच्चार्यमाणो वर्ण ।\nतुल्यास्यप्रयत्नं सवर्णम् । --- ताल्वादिस्थानमाभ्यन्तरप्रयत्नश्च इत्येतत्द्द्वयं यस्य येन तुल्यं तन्मिथः ।\nतुल्यास्यप्रयत्नं सवर्णम्  --- अ-आ, इ,ई इत्यादि ।\nबाह्यप्रयत्नः --- एकादशधा\nस्पृष्ठटेषत्स्पृष्टेषद्विवृतविवृतसंवृत भेदात् --- आभ्यन्तरः पञ्चविधः\nखरां --- विवारः,श्वासः,अघोशश्च प्रयत्नः।\nहशां --- संवारः,नादः,घोषश्च प्रयत्नाः।\nयणां । --- वर्गस्य प्रथमतृतीयपञ्चमानाञ्च अल्पप्राणः प्रयत्नः ।\nशलां --- वर्गद्वितीयचतुर्थयोश्च महाप्राणः प्रयत्नः ।\nस्पर्शाः --- कादयो मावसानाः\nस्पर्शाणां --- स्पृष्टं नाम प्रयत्नः\nय,र,ल,व --- अन्तस्थाः\nअन्तस्थानां --- ईषत्स्पृष्टप्रयत्नः\nअचः स्वराः --- विवृतं नाम प्रयत्नः\nश,ष,स,ह ऊष्माणः --- ईषषद्विवृतं प्रयत्नः\nहृस्वस्यावर्णस्य प्रयोगे --- संवृतम्\nप्रक्रियादशायान्तु --- विवृतमेव\nअणुदित्सवर्णस्य चात्प्रत्ययः --- अविधीयमानो अण् उदिच्च सवर्णस्य संज्ञा स्यात् । अत्रैवाण् परेण णकारेण\nप्रत्ययः --- प्रतीयते विधीयते इति प्रत्ययः\nउदितः --- कु चु टु तु पु एते उदितः\nतपरस्तत्कालस्य --- तः परो यस्मात् स च तात्परश्चोच्चार्यमाणः समकालस्यैव संज्ञा स्यात्।\nवृद्धिरादैच् --- आदैच्च वृद्धिसंज्ञः स्यात् ।\nअदेङ् गुणः --- अदेङ् च गुण संंज्ञः स्यात् ।\nभूवादयो धातवः --- क्रियावाचिनो भ्वादयो धातुसंज्ञाः स्युः\nचोदयो..सत्वे --- अद्रव्यार्थाश्चादयो निपातसंज्ञाः स्युः ।\nप्रादयः --- अद्रव्यार्थाः प्रादयः निपात संज्ञाः स्युः\nअपसर्गाः क्रियायोगे --- प्रादयः क्रियायोगे उपसर्गसंज्ञाः स्युः ।\nसुप्तिङन्तं पदम् --- सुबबन्तं तिङ्न्तं च पदसंज्ञः स्यात्\nहलो..नन्तराः संयोगः --- अज्भिरव्यवहिताः हलः संयोगसंज्ञाः स्युः।\nहृस्वं लघु --- हृस्वं लघु संज्ञं स्यात् ।\nसंयोगे गुरु --- संयोगे परे हृस्वं गुरुसंज्ञं स्यात् ।\nदीर्घं च --- दीर्घं च गुरुसंज्ञं स्यात् ।\nपरः सन्निकर्षः संहिता । --- वर्णानामतिशयितः सन्निधिः संहितासंज्ञः स्यात् ।\nयेन विधिस्तदन्तस्य --- विशेषणं तददन्तस्य संज्ञा स्यात् ,स्वस्य च रूपस्य ।\nषष्ठी स्थानेयोगा --- अनिर्धारितसम्बन्धविशेषा षष्ठी स्थानेयोगा बोध्या । स्थानाश्च प्रसङ्गः ।\nस्थाने..न्तरतमः --- प्रसङ्गे सति सदृशतमः आदेशः स्यात् ।\nअलोन्त्यस्य --- षष्ठीनिर्दीष्टस्यान्त्यस्याल आदेशः  स्यात् ।\nतस्मिन्निति निर्दिष्ठे पूर्वस्य --- सप्तमीनिर्देशेन विधीयमानं कार्यं वर्णान्तरेणाव्यवहितस्य पूर्वस्य बोध्यम् ।\nतस्मादित्युत्तरस्य --- पंचमीनिर्देशेन क्रियमाणं कार्यं वर्णान्तरेणाव्यवहितस्य परस्य ज्ञेयम्\nआदेः परस्य --- परस्य यद्विहितं तत्तस्यादेर्बोध्यम् । अलोन्त्यस्य इत्यपवादः ।\nअनेकाल्शित्सर्वस्य --- अनेकाल् यः आदेशः शिच्च सः सर्वस्य स्थाने भवति ।\nविप्रतिषेधे परं कार्यम् --- तुल्यवलविरोधे सति परं कार्यं स्यात् ।\nङिच्च --- ङिदनेकालपि अन्त्यस्यैव स्यात् ।\nआद्यन्तौ टकितौ --- टित्कितौ यस्योक्तौ तस्य क्रमादाद्यन्तावयवौ स्तः ।\nमिदचोन्त्यात्परः । --- अचः इति षष्ठ्यन्तम् । अचां मध्ये योच् तस्मात् परः तस्यैवान्तवयवः मित् स्यात् \n</string>
    <string name="n">ओं काराय नमो नमः\n Read </string>
</resources>