<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spin"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b4"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:background="@color/yellow"
        android:text="@string/bt4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/barrier2"
        app:layout_constraintEnd_toEndOf="@+id/b2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:padding="10sp"
        android:gravity="center"
        android:text="@string/txt"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/b2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bt2"
        android:textSize="20sp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintEnd_toEndOf="@+id/b3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/b3"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bt3"
        android:textSize="20sp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="@+id/b1"
        app:layout_constraintStart_toStartOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b1"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bt1"
        android:textSize="20sp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck"  android:layout_width="0sp"/>

    <Button
        android:id="@+id/b5"
        android:layout_width="0sp"
        android:layout_height="53dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_launcher_background"
        android:text="@string/next"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier2"
        app:layout_constraintVertical_bias="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintGuide_percent="1.40" />

    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b5"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/barrier2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="78dp"
        android:layout_height="52dp"
        android:layout_marginBottom="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_rotate" />
</androidx.constraintlayout.widget.ConstraintLayout>